--- a/templates/_google_sign_up_button.html
+++ b/templates/_google_sign_up_button.html
@@ -1,4 +1,4 @@
-<button class="gsi-material-button" onclick="window.location.href='{{ url_for('googleLogin') }}'" aria-label="Sign in with Google" style="width:300px">
+<button class="gsi-material-button" onclick="window.location.href='{{ url_for('googleLogin') }}'" aria-label="Sign up with Google" style="width:400px">
     <div class="gsi-material-button-state"></div>
     <div class="gsi-material-button-content-wrapper">
       <div class="gsi-material-button-icon">
@@ -16,7 +16,7 @@
   </button>
 
 <noscript>
-    <a href="{{ url_for('googleLogin') }}" class="gsi-material-button" aria-label="Sign in with Google">
-        Sign in with Google
+    <a href="{{ url_for('googleLogin') }}" class="gsi-material-button" aria-label="Sign up with Google">
+        Sign up with Google
     </a>
 </noscript>
