--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 {% block title %}MOX - Create account{% endblock %}
 
 {% block header %}
-MOX 
+<a href="{{ url_for('home') }}">MOX</a>
 {% endblock %}
 
 {% block main %}
